routerrpc: add XAddLocalChanAliases & XDeleteLocalChanAliases
